# rgr

./: .gitignore  CMakeLists.txt  dwt.h  dwt_openMP.h  idwt.h  image.h  main.cpp  main.cu  results.h  utils.h
python/: generate_dataset.py  generate_test_certainty_lib.py  test_certainty.py
